--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Alegreya Sans', serif;
+    font-family: 'Alegreya Sans SC', sans-serif;
     background-color: #f1f1f1;
     background-image: url("../images/concrete_seamless.png");
 }
@@ -9,7 +9,9 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    
+    position: sticky;
+    top: 0;
+    /* use more offsets */
 }
 
 .nav_links {
@@ -17,6 +19,10 @@ header {
     flex-direction: column;
     align-items: center;
 }
+
+/* .nav_links li a:visited{
+    color:inherit
+} */
 
 .card > header {
 
@@ -27,6 +33,10 @@ header {
     padding: 20px 0px 20px 0px;
     border-radius: 7px 7px 0px 0px;
 } 
+
+.card header{
+    position:static;
+}
 
 .pricing {
     display: flex;
