--- a/css/style.css
+++ b/css/style.css
@@ -9,33 +9,26 @@ header {
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    position: sticky;
-    top: 0;
-    /* use more offsets */
 }
 
 .nav_links {
     display: flex;
     flex-direction: column;
     align-items: center;
+    color:blue;
 }
 
-
-header li a:selected {
-    color:inherit
+.nav_links li a:visited {
+    color:inherit;
 }
 
 .card > header {
-
     display: flex;
     flex-basis:0;
     background-color: #288088;
     border: 2px solid #45ADAD;
     padding: 20px 0px 20px 0px;
     border-radius: 7px 7px 0px 0px;
-} 
-
-.card header{
     position:static;
 }
 
@@ -66,11 +59,39 @@ header li a:selected {
     flex-wrap:wrap
 }
 
+header img {
+    animation-name: movement;
+    animation-duration: 5s;
+    /* makes it not repeat */
+    animation-fill-mode:forwards;
+}
+
+@keyframes movement {
+    from {
+        width: 50px;
+        opacity:0;
+    }
+    to {
+        width: 425px;
+        opacity:1;
+    }
+}
+
+@media (prefers-reduced-motion) {
+    #logo {
+        animation: none;
+    }
+}
+
 @media screen and (min-width: 850px){
     header {
         display: flex;
         flex-direction: row;
         justify-content: space-between;
+        position: sticky;
+        top: 0;
+        right:0;
+        left:0;
     }
 
     .nav_links {
@@ -82,4 +103,53 @@ header li a:selected {
         flex-basis: 250px;
 
     }
+}
+
+@media print {
+    body {
+        background-image: none;
+        font-family: serif;
+    }
+   
+    
+    header {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        
+    }
+
+    nav {
+        width: 100%;
+    }
+
+    .nav_links {
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+
+    }
+
+    .pricing{
+        display: flex;
+        flex-direction: row;
+        flex-wrap: nowrap;
+        align-items:flex-end;
+        
+    }
+        
+    .card {
+        border: 2px solid #45ADDD;
+        flex-basis: 250px;
+    }
+
+    #gallery,
+    .gallery{
+        display:none;
+    }
+
+    .card > ul li::before {
+        content: "👍";
+      }
 }
