--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,5 @@
 body {
-    font-family: 'Alegreya Sans SC', sans-serif;
+    font-family: "Alegreya Sans SC", serif;
     background-color: #f1f1f1;
     background-image: url("../images/concrete_seamless.png");
 }
